Fix elements overflow for form

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -110,7 +110,7 @@ footer {
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
     align-items: start;
-    
+
 }
 
 #contacto h2 {
@@ -127,7 +127,6 @@ form {
     border-radius: 10px;
     backdrop-filter: blur(10px);
     height: fit-content;
-    padding-right: 2rem;
 }
 
 form label {
@@ -140,7 +139,7 @@ form label {
 form input,
 form textarea {
     width: 100%;
-    padding: 0.8rem;
+    padding: 0.8rem 0 0.8rem 0rem;
     margin-bottom: 1.5rem;
     border: none;
     border-radius: 5px;
